# foundation-models-autonomous-driving

./: .gitignore  CMakeLists.txt  Foundation Models_ Transforming Autonomous Driving.pptx  README.md
include/: kernel.cuh  pattern_loader.hpp  renderer.hpp
src/: kernel.cu  main.cu  pattern_loader.cpp  renderer.cpp
